# libgaloisfield

./: .gitignore  Makefile.am  NEWS  README  configure.ac  libgaloisfield.pc.in
doc/: doxygen.config.in  html.footer.in  mainpage.dox
src/: GFElement.cc  GaloisField.cc  Makefile.am  Prime.cc  debug.cc  debug_ostream_operators.cc  debug_ostream_operators.h  generate_factorized.cc  generate_irreducible_bits.cc  irreducible_bits.cc  pch-source.h
src/include/: Makefile.am  debug.h
src/include/libgaloisfield/: GFElement.h  GaloisField.h  Makefile.am  MultiLoop.h  PolynomialOverZ2.h  Prime.h  bithacks.h  config.h  debug.h
src/tests/: Makefile.am  field_basics.cc  field_frobenius.cc  field_generator.cc  field_order.cc  hello_world.cc  polynomial_gcd.cc  prime_generator.cc  sys.h.in
